BajiDeveloperEdition/src/objects/Company__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CEO__c</fullName>
        <label>CEO</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <summaryForeignKey>Employee__c.Company__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cFeild__c</fullName>
        <label>cFeild</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Company</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Count__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company</pluralLabel>
    <recordTypes>
        <fullName>new_company_recordtype</fullName>
        <active>true</active>
        <label>new company recordtype</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>